# wuthering-waves-gacha-record

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: core.rs  main.rs  view.rs  widgets.rs
src/core/: gacha.rs  message.rs  statistics.rs  update.rs  util.rs
src/view/: main_view.rs
src/widgets/: pie_chart.rs
