[package]
name = "wuthering-waves-gacha-record"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
anyhow = "1"
regex = "1"
sysinfo = "0.30"
tracing = "0.1"
tracing-subscriber = "0.3.18"
egui = "0.28"
egui_plot = "0.28"
eframe = { version = "0.28", features = ["wgpu"] }