[package]
name = "wuthering-waves-gacha-record"
version = "0.5.1"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
anyhow = "1"
regex = "1"
sysinfo = "0.31"
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ['local-time', 'time'] }
time = { version = "0.3", features = ["macros", "formatting"] }
egui = "0.28"
egui_plot = "0.28"
eframe = { version = "0.28", features = ["wgpu"] }
image = "0.25"
toml = "0.8"
rfd = "0.14"
futures-util = "0.3"
ratelimit = "0.9"

[build-dependencies]
winres = "0.1"

[profile.release]
lto = true
strip = true
opt-level = 3